--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,6 +3,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="triangle"></ion-icon>
+      <ion-icon name="star"></ion-icon>
       <ion-label>Tab 1</ion-label>
     </ion-tab-button>
 
